# adaptive-self-assessment-sim

./: .gitignore  LICENSE  README-ja.md  README.md  pyproject.toml  requirements.txt  temp.py
configs/: config.yaml  template.yaml
data/: README.md
data/processed/w2-synthetic_20250326_1300_processed/: ws2_1_information_1300_processed.csv
data/processed/ws1_synthetic_240531_processed/: 1_syntheticdata_informationliteracy.csv
data/sample/: ws1_1_information_sample.csv  ws1_sample.csv  ws2_1_information_sample.csv  ws2_sample.csv
data/sample/ws1/: ws1_data_sample.csv
data/sample/ws2/: ws2_data_sample.csv  ws2_data_sample2.csv
data/synthetic/ws2_synthetic_20250326_130/: ws2_1_information_130.csv  ws2_2_thinking_130.csv  ws2_3_writing_130.csv  ws2_4_presentation_130.csv  ws2_5_quant_130.csv  ws2_6_learning_130.csv  ws2_7_act_130.csv  ws2_8_teamwork_130.csv
data/synthetic/ws2_synthetic_20250326_1300/: ws2_1_information_1300.csv  ws2_2_thinking_1300.csv  ws2_3_writing_1300.csv  ws2_4_presentation_1300.csv  ws2_5_quant_1300.csv  ws2_6_learning_1300.csv  ws2_7_act_1300.csv  ws2_8_teamwork_1300.csv
notebooks/: compare_completion_algorithms_ws1.py  compare_completion_algorithms_ws2.py
scripts/: cmp_params.py  cmp_thresholds.py  compare_thresholds_ws1.py  compare_thresholds_ws2.py  run_adaptive_sim.py  run_non_adaptive_sim.py  run_sim.py  run_ws1_sim.py  run_ws2_sim.py
scripts/preprocess/: data_preprocessing_ws2.py
scripts/simulation/: main_temp.py  run_ws1_sim.py  simulation.py
src/adaptive_self_assessment/: __init__.py  config.py  model_store.py  predictor.py  random.py  selector.py  spec.py
src/adaptive_self_assessment/components/: model_store.py  predictor.py  rng.py  selector.py
src/adaptive_self_assessment/simulation/: __init__.py  adaptive_ws1.py  adaptive_ws2.py  base_model.py  common.py  main.py  non_adaptive_ws1.py  non_adaptive_ws2.py  run_ws1_sim.py  run_ws2_sim.py  ws1.py  ws2.py
src/simulation/: selector.py  spec.py
tests/: conftest.py  test_predictor.py  test_selector.py  test_sim.py  test_spec.py
tests/integration/: test_non_adaptive_sim.py  test_predictor.py  test_sim.py
tests/unit/: test_common.py  test_config.py  test_model_store.py  test_random.py  test_rng.py  test_selector.py  test_spec.py
