[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "adaptive-self-assessment-sim"
version = "0.0.1"
description = "A simulation framework for machine-learning-driven adaptive self-assessment"
readme = "README.md"
authors = [
  { name = "Yuta Wakui", email = "w2531163@gl.cc.uec.ac.jp" }
]
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "pyyaml",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/yuta-wakui/adaptive-self-assessment-sim"

[tool.hatch.build.targets.wheel]
packages = ["src/adaptive_self_assessment"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/scripts",
  "/tests",
  "README.md",
  "LICENSE",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"